# Quick3DQuote

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/embed/: .eslintrc.json  .vercelignore  README.md  next.config.mjs  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
apps/embed/src/: middleware.ts
apps/embed/src/app/: globals.css  layout.tsx  page.tsx
apps/embed/src/app/embed.js/: route.ts
apps/embed/src/app/success/: page.tsx
apps/embed/src/components/: checkout-cta.tsx  error-banner.tsx  loading-shimmer.tsx  material-panel.tsx  mesh-viewer.tsx  price-summary.tsx  upload-dropzone.tsx  widget-shell.tsx
apps/embed/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
apps/embed/src/lib/: api.ts  cn.ts  colour-scheme.ts  env.ts  post-message.ts  state-machine.test.ts  state-machine.ts  telemetry.ts
apps/embed/src/lib/server/: r2.ts  session.ts  supabase.ts
apps/web/: .eslintrc.json  .vercelignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/callback/: route.ts
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/billing/: billing-actions.tsx  page.tsx
apps/web/src/app/(dashboard)/branding/: branding-form.tsx  page.tsx
apps/web/src/app/(dashboard)/embed/: page.tsx  (+2 more)
apps/web/src/components/: dashboard-shell.tsx  empty-state.tsx  stat-card.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  select.tsx  sheet.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  toast.tsx
apps/web/src/lib/: api-error.ts  api.ts  auth.ts  env.ts  r2.ts  stripe.ts  utils.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/web/src/test/: setup.ts
docs/: README.md  api-design.md  architecture.md  db-schema.md  design-system.md  devops.md  product-spec.md  security.md  ux-flows.md
services/quote-engine/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
services/quote-engine/app/: __init__.py  auth.py  config.py  errors.py  logging_config.py  main.py  mesh.py  pricing.py  schemas.py  storage.py
services/quote-engine/app/routes/: analyze.py  health.py  price.py
services/quote-engine/scripts/: smoke.sh
services/quote-engine/tests/: conftest.py  test_analyze.py  test_auth.py  test_health.py  test_pricing.py
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20260421120000_init_schema.sql  20260421120100_rls_policies.sql  20260421120200_functions_triggers.sql  20260421120300_storage_buckets.sql
supabase/tests/rls/: README.md  test_tenant_isolation.sql
(+29 files in other folders)
