[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quote-engine"
version = "0.1.0"
description = "Quick3DQuote mesh analysis and pricing service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Quick3DQuote", email = "olly@dijitul.com" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "trimesh>=4.5,<5",
    "numpy>=2.1,<3",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "boto3>=1.35,<2",
    "httpx>=0.27,<0.28",
    "python-multipart>=0.0.12,<0.1",
    "structlog>=24.4,<25",
    "sentry-sdk[fastapi]>=2.17,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "ruff>=0.7,<0.8",
    "mypy>=1.11,<2",
    "httpx>=0.27,<0.28",
    "types-boto3>=1.0,<2",
    "moto>=5.0,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─────────────────────────────── Ruff ───────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # handled by formatter
    "B008",  # FastAPI Depends() in defaults is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────── Mypy ───────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
files = ["app"]

[[tool.mypy.overrides]]
module = [
    "trimesh",
    "trimesh.*",
    "boto3",
    "botocore",
    "botocore.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ─────────────────────────── Pytest ────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:trimesh.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
